// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataTableHeader.ts desktop should render 1`] = `

<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        aria-sort="none"
        class="text-xs-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Calories
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Fat (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Carbs (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Protein (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Iron (%)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts desktop should work with multiSort 1`] = `

<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        aria-sort="none"
        class="text-xs-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Calories
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Fat (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Carbs (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Protein (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Sorted descending. Activate to remove sorting."
        aria-sort="descending"
        class="text-xs-left sortable active desc"
    >
      <span>
        Iron (%)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
      <span class="v-data-table-header__sort-badge">
        1
      </span>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts desktop should work with showGroupBy 1`] = `

<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        aria-sort="none"
        class="text-xs-left"
    >
      <span>
        Dessert (100g serving)
      </span>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Calories
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Fat (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Carbs (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Protein (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
      <span>
        group
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Iron (%)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
      <span>
        group
      </span>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts desktop should work with sortBy correctly 1`] = `

<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        aria-sort="none"
        class="text-xs-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Calories
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Fat (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Carbs (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Protein (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Sorted descending. Activate to remove sorting."
        aria-sort="descending"
        class="text-xs-left sortable active desc"
    >
      <span>
        Iron (%)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts desktop should work with sortDesc correctly 1`] = `

<thead class="v-data-table-header">
  <tr>
    <th role="columnheader"
        scope="col"
        aria-label="Dessert (100g serving)"
        aria-sort="none"
        class="text-xs-left"
    >
      <span>
        Dessert (100g serving)
      </span>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Calories: Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Calories
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Fat (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Fat (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Carbs (g): Sorted descending. Activate to remove sorting."
        aria-sort="descending"
        class="text-xs-left sortable active desc"
    >
      <span>
        Carbs (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Protein (g): Not sorted. Activate to sort ascending."
        aria-sort="none"
        class="text-xs-left sortable"
    >
      <span>
        Protein (g)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
    <th role="columnheader"
        scope="col"
        aria-label="Iron (%): Sorted ascending. Activate to sort descending."
        aria-sort="ascending"
        class="text-xs-left sortable active asc"
    >
      <span>
        Iron (%)
      </span>
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.sort
      </i>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts mobile should render 1`] = `

<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th colspan="6">
      <div class="v-data-table-header-mobile__wrapper">
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <label aria-hidden="true"
                       class="v-label theme--light"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <input aria-label="Sort by"
                         autocomplete="on"
                         readonly="readonly"
                         type="text"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      $vuetify.icons.dropdown
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts mobile should render with dataTableSelect header 1`] = `

<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th colspan="7">
      <div class="v-data-table-header-mobile__wrapper">
        <div class="v-data-table__checkbox v-simple-checkbox">
          <div class="v-input--selection-controls__ripple">
          </div>
          <i aria-hidden="true"
             class="v-icon material-icons theme--light"
          >
            $vuetify.icons.checkboxOff
          </i>
        </div>
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <label aria-hidden="true"
                       class="v-label theme--light"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <input aria-label="Sort by"
                         autocomplete="on"
                         readonly="readonly"
                         type="text"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      $vuetify.icons.dropdown
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts mobile should work with multiSort 1`] = `

<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th colspan="6">
      <div class="v-data-table-header-mobile__wrapper">
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <label aria-hidden="true"
                       class="v-label v-label--active theme--light"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <span tabindex="-1"
                        class="v-chip sortable v-chip--no-color theme--light v-size--default"
                  >
                    <span class="v-chip__content">
                      Iron (%)
                      <div class="v-chip__close sortable active desc">
                        <i aria-hidden="true"
                           class="v-icon material-icons theme--light"
                        >
                          $vuetify.icons.sort
                        </i>
                      </div>
                    </span>
                  </span>
                  <input aria-label="Sort by"
                         autocomplete="on"
                         readonly="readonly"
                         type="text"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      $vuetify.icons.dropdown
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts mobile should work with showGroupBy 1`] = `

<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th colspan="6">
      <div class="v-data-table-header-mobile__wrapper">
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <label aria-hidden="true"
                       class="v-label theme--light"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <input aria-label="Sort by"
                         autocomplete="on"
                         readonly="readonly"
                         type="text"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      $vuetify.icons.dropdown
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts mobile should work with sortBy correctly 1`] = `

<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th colspan="6">
      <div class="v-data-table-header-mobile__wrapper">
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <label aria-hidden="true"
                       class="v-label v-label--active theme--light"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <span tabindex="-1"
                        class="v-chip sortable v-chip--no-color theme--light v-size--default"
                  >
                    <span class="v-chip__content">
                      Iron (%)
                      <div class="v-chip__close sortable active desc">
                        <i aria-hidden="true"
                           class="v-icon material-icons theme--light"
                        >
                          $vuetify.icons.sort
                        </i>
                      </div>
                    </span>
                  </span>
                  <input aria-label="Sort by"
                         autocomplete="on"
                         readonly="readonly"
                         type="text"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      $vuetify.icons.dropdown
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>

`;

exports[`VDataTableHeader.ts mobile should work with sortDesc correctly 1`] = `

<thead class="v-data-table-header v-data-table-header-mobile">
  <tr>
    <th colspan="6">
      <div class="v-data-table-header-mobile__wrapper">
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <label aria-hidden="true"
                       class="v-label v-label--active theme--light"
                       style="left: 0px; position: absolute;"
                >
                  Sort by
                </label>
                <div class="v-select__selections">
                  <span tabindex="-1"
                        class="v-chip sortable v-chip--no-color theme--light v-size--default"
                  >
                    <span class="v-chip__content">
                      Iron (%)
                      <div class="v-chip__close sortable active asc">
                        <i aria-hidden="true"
                           class="v-icon material-icons theme--light"
                        >
                          $vuetify.icons.sort
                        </i>
                      </div>
                    </span>
                  </span>
                  <input aria-label="Sort by"
                         autocomplete="on"
                         readonly="readonly"
                         type="text"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      $vuetify.icons.dropdown
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
              </div>
            </div>
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>

`;
